<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="2dp"
    android:paddingTop="0dp"
    android:paddingRight="2dp"
    android:paddingBottom="0dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name_field"
        android:inputType="textPersonName"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/birthdayEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/birthday_field"
        android:inputType="date"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/devCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dev_field"
        android:visibility="gone" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_button"
        tools:ignore="TextContrastCheck" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/helloTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="@string/default_text" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_descr"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/def" />
</LinearLayout>